# hpc_agent

./: .env  .env.example  .gitignore  README.md  setup.sh
backend/: .env.example  pyproject.toml  run.py
backend/app/: __init__.py  database.py  models.py  task_runtime.py
backend/app/routes/: agents.py  budget.py  endpoints.py  tasks.py
backend/app/templates/: submit_task.j2
backend/app/utils/: data_prep.py  functions.py  login_flow.py  scripts_render.py
backend/hpc_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/instance/: hpc_agent.db
runner/: .env  .env.example  package.json
runner/monitor/: index.html  package-lock.json  package.json  vite.config.js
runner/monitor/public/: manifest.json
runner/monitor/src/: App.jsx
runner/monitor/src/components/layout/: BudgetPage.jsx  EndpointsPage.jsx  Footer.jsx  ProjectListPage.jsx  ProjectTabSidebar.jsx  ProjectView.jsx
runner/monitor/src/components/modals/: AddProjectModal.jsx  AgentSettingsModal.jsx  ApiKeyHelpModal.jsx
runner/monitor/src/components/panels/: AgentDetailPanel.jsx  ChatPanel.jsx  ProjectSettingsPanel.jsx  SettingsPanel.jsx
runner/monitor/src/components/project/: WorkerCard.jsx
runner/monitor/src/components/ui/: ProviderSelector.jsx
runner/monitor/src/utils/: agent-label.js  hpc-api.js
runner/scripts/: setup.js
runner/src/: agent-runner.js  hpc-proxy.js  hpc-tool.js  server.js
